[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hsd"
version = "0.1"
authors = [{name = "DFTB+ developers group"}, {email = "info@dftbplus.org"},]
dependencies = ["numpy", "scipy"]
requires-python = ">=3.2"
description = "Tools for reading, writing and manipulating data stored in the human-friendly structured data (HSD) format"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "BSD"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "http://www.dftbplus.org"
Documentation = "https://hsd-python.readthedocs.io/en/latest/"
Repository = "https://github.com/dftbplus/hsd-python.git"
Issues = "https://github.com/dftbplus/hsd-python/issues"
